buttons in the editor__header are no longer stretching

--- a/CSS Grid/recreation of codepen/style.css
+++ b/CSS Grid/recreation of codepen/style.css
@@ -46,6 +46,7 @@ html {
   .editor__header {
       display: grid;
       grid-template-columns: auto 1fr auto;
+      align-items: center;
   }
 
   .pen {
